--- a/_posts/2023-04-21-INMEDIA-盤點-綠在區區-成效-新合約每月可多獲18萬撥款增42.html
+++ b/_posts/2023-04-21-INMEDIA-盤點-綠在區區-成效-新合約每月可多獲18萬撥款增42.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/202304221.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府在2021年斥資2.5億元推行「綠在區區」回收便利點，第一期先在全港18區設22間，再於去年增設10間，回收便利點以「6」字作招牌，統一宣傳。政策推行至今成效如何？環保署回覆《獨媒》的數字顯示，該批回收便利點過去兩年的分別有9,000及10,900公噸，佔整個回收網絡的總回收量逾六成及五成。每間回收量為409及495公噸，按年增長約兩成，署方稱能達到合約定明的目標。第二期的新約已陸續出，政府加碼注資，現時每間回收便利點每月平均可多獲18萬元撥款，較舊合約多42%。</p>
+<img src="https://www.inmediahk.net/files/column_images/202304231.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府在2021年斥資2.5億元推行「綠在區區」回收便利點，第一期先在全港18區設22間，再於去年增設10間，回收便利點以「6」字作招牌，統一宣傳。政策推行至今成效如何？環保署回覆《獨媒》的數字顯示，該批回收便利點過去兩年的分別有9,000及10,900公噸，佔整個回收網絡的總回收量逾六成及五成。每間回收量為409及495公噸，按年增長約兩成，署方稱能達到合約訂明的目標。第二期的新約已陸續出，政府加碼注資，現時每間回收便利點每月平均可多獲18萬元撥款，較舊合約多42%。</p>
 <p><strong>第一期每間回收便利點回收量按年升約兩成 均達合約目標</strong></p>
 <p>政府的回收系統，原依靠路旁的三色桶，惟其成效不佳，民間則有多個自發的「不是垃圾站」出現。2015年，當局以環境及自然保育基金委聘非政府組織，設立17個社區回收中心和兩個流動回收站。2020年「升級」，斥資超過2.5億元在全港18區設立22個以「6」字作招牌的「綠在區區」回收便利點，提供定時定點回收街站及較長時間的服務。22間回收便利點於2021年2月全面投入服務，並於2022年陸續開展第二期合約，在社區再增設10個回收便利點。政府會以合約形式委聘非牟利機構營運，合約期為兩年。</p>
 <p>回收便利點至今推行兩年，究竟成效如何？根據<a href="https://www.legco.gov.hk/yr2023/chinese/fc/fc/w_q/eeb-e-c.pdf">立法會文件</a>，「綠在區區」社區回收網絡（即包括現行11間回收環保站及32間回收便利點）在2021年的回收量達14,400公噸，是2020年3,950公噸的逾三倍。2022年的回收量更達20,300公噸，較2021年增約41%，每項回收物過去5年亦有按年增長。</p>
