--- a/_posts/2023-04-21-PQ-北韓新洲際彈道飛彈-火星18-射程中調角度-觸動日警報籲北海道民眾避難.html
+++ b/_posts/2023-04-21-PQ-北韓新洲際彈道飛彈-火星18-射程中調角度-觸動日警報籲北海道民眾避難.html
@@ -16,7 +16,7 @@ author: 陳怡菱
 
 
 
-<figure class="wp-block-image size-full"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb.png" alt="" class="wp-image-133937" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb-768x512.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>北韓在4月13日試射使用固體燃料的新型洲際彈道飛彈「火星-18」<br>（圖／朝中社）</figcaption></figure>
+<figure class="wp-block-image size-full"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb.png" alt="" class="wp-image-133937" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb.png 900w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb-300x200.png 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/4e736b03-f6244676-889d-4076-9d2c-118ad7d7c3fb-768x512.png 768w" sizes="(max-width: 900px) 100vw, 900px" /><figcaption>北韓在4月13日試射使用固體燃料的新型洲際彈道飛彈「火星-18」<br>（圖／朝中社）</figcaption></figure>
 
 
 
