--- a/_posts/2023-04-23-INITIUM-台湾狒狒脱逃事件-网路迷因与全民追缉外-我们-待牠如一只狒狒-了吗.html
+++ b/_posts/2023-04-23-INITIUM-台湾狒狒脱逃事件-网路迷因与全民追缉外-我们-待牠如一只狒狒-了吗.html
@@ -8,11 +8,18 @@ tags: blog
 author: 萧人瑄
 ---
 
-<p>「我们在真正了解这只狒狒之前，甚至在有机会于行为上与牠亲近时，反而先在心中为牠贴满“标签”，选择与牠为敌。」</p><p>萧人瑄</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-taiwan-opinion-baboon-death/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/5e3c0597643d4f23adead340cb289bef.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="身亡的狒狒送抵台北市动物园检验。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<p>「我们在真正了解这只狒狒之前，甚至在有机会于行为上与牠亲近时，反而先在心中为牠贴满“标签”，选择与牠为敌。」</p><p>萧人瑄</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-taiwan-opinion-baboon-death/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/babbfb0339b041a08fd11153db2e12f2.jpeg?imageView2/1/w/1080/h/718/format/jpg" alt="身亡的狒狒送抵台北市动物园检验。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
             <figcaption itemprop="caption">身亡的狒狒送抵台北市动物园检验。<span class="credit">图：林务局提供</span></figcaption></figure><p><strong>（萧人瑄，国立台湾师范大学环境教育博士，黑猩猩行为与保育推广讲师）</strong></p>
 <p><small>【编者按】台湾3月上旬，一只东非狒狒出现在桃园市街头，历经多次围捕，依旧无法顺利捕捉到狒狒。在东非狒狒散逸的18天中，台湾的网路上出现许多狒狒的谐音及哏图，引发社会一阵关注热潮。在台湾，目前合法登记饲养的单位只有台北市立动物园、新竹六福村及<a href="https://theinitium.com/article/20230111-taiwan-shoushan-zoo-reconstruction/">高雄寿山动物园</a>，原先这只狒狒遭怀疑是从六福村走失，第一时间六福村公开否认，经清点园区狒狒数量，还比原先的个体数还多一只，因而引发管理不彰的质疑。</small></p>
 <p><small>3月27日，这只狒狒经通报躲藏于一处民宅内，桃园市农业局人员获报前往展开围捕。在捕获狒狒后，却发现狒狒躯体流血不止，经检视才发现是<a href="https://news.pts.org.tw/article/632353">遭猎枪击中</a>，最终不治身亡。这起在台湾社会获得广大讨论的狒狒事件，最后以狒狒中枪重伤不治为结局；而在检视狒狒身上的枪伤后，六福村也才承认是该园区的狒狒，再度引发舆论沸腾。</small></p>
 <p><small>事件后，六福村遭开罚最高的五万元罚锾，林务局也在事发一个月后，提出《野生动物保育法》修正草案，加重处罚至最高15万元，且围捕费用由所有人或占有人负担。而除了修法，我们又该如何以狒狒事件为镜，看待非人动物在人类社会的接触与互动呢？</small></p>
-<p>我从没想过，台湾的头条新闻会是关于一只狒狒游走民间的报导；这只狒狒也可能连作梦都没有想过，自己会因为一连串不当的人为操作而失去宝贵的生命，还因此登上了<a href="https://news.cts.com.tw/cts/general/202303/202303302160145.html">国际媒体</a>。不过，新不新闻对这只狒狒来说其实不具任何意义，那可是人类社会的事；牠在游历时所关心的，会是下一餐在哪里，以及在哪里休息会是安全的。</p>
-<p>走出动物园（六福村）外的日子会是什么样子呢？当我把自己放在那只狒狒的立场来思考，会发现园外的步步都是挑战，时时都需要勇气。首先，这只狒狒应是出生自园内，且推估是第一次“外出”，牠是头一次必须自己找食物，也是头一次必须自己决定要往哪里走。由于动物园中给予的食物种类，比起自然环境可提供的少很多，在没有“野生前辈”的引领下，这只狒狒必须自己摸索“可吃及不可吃”，也因此，牠会光顾人类的菜园是再自然不过的事了，因为在那里可以看到认识的食物、闻到熟悉的味道。</p>
-<p>除此之外，其他不曾出现在园内展示场中的人、事、物，对牠来说都是新的，牠唯有依靠本能及自己的判断力来趋吉避凶，包含判断要如何穿越人车来往的道路，以及是否要进入可能有其他生物出没的楼房中探询，而在这个满是水管及地下水道的环境中，又要去哪里找水喝呢？</p>
+<p>我从没想过，台湾的头条新闻会是关于一只狒狒游走民间的报导；这只狒狒也可能连作梦都没有想过，自己会因为一连串不当的人为操作而失去宝贵的生命，还因此登上了<a href="https://news.cts.com.tw/cts/general/202303/202303302160145.html">国际媒体</a>。不过，新不新闻对这只狒狒来说其实不具任何意义，那可是人类社会的事；牠在游历时所关心的，会是下一餐在哪里，以及在哪里休息会是安全的。<br><br>走出动物园（六福村）外的日子会是什么样子呢？当我把自己放在那只狒狒的立场来思考，会发现园外的步步都是挑战，时时都需要勇气。首先，这只狒狒应是出生自园内，且推估是第一次“外出”，牠是头一次必须自己找食物，也是头一次必须自己决定要往哪里走。由于动物园中给予的食物种类，比起自然环境可提供的少很多，在没有“野生前辈”的引领下，这只狒狒必须自己摸索“可吃及不可吃”，也因此，牠会光顾人类的菜园是再自然不过的事了，因为在那里可以看到认识的食物、闻到熟悉的味道。<br><br>除此之外，其他不曾出现在园内展示场中的人、事、物，对牠来说都是新的，牠唯有依靠本能及自己的判断力来趋吉避凶，包含判断要如何穿越人车来往的道路，以及是否要进入可能有其他生物出没的楼房中探询，而在这个满是水管及地下水道的环境中，又要去哪里找水喝呢？</p>
+<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-taiwan-opinion-baboon-death/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/006798fa44584ca9bab857da3f2e0190.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="东非狒狒出现在桃园市街头。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+<figcaption itemprop="caption">东非狒狒出现在桃园市街头。<span class="credit">图：网上图片</span></figcaption></figure>
+
+<h2>疏离感，让我们在狒狒身上贴满标签</h2>
+<blockquote>
+<p>更多的人用“看戏”的态度来面对牠的存在，以“娱乐自己”的方式接收著相关报导，然后发布无关痛痒、自以为诙谐的留言。</p>
+</blockquote>
+<p>对于一只没有“所有权”概念的非人动物来说，在一个所有权爆棚，到处充满了“我的”菜园、“我的”房子、“我的”工厂、“我的”地盘等的人类社会中，往往会被冠上许多莫须有的头衔：人们认为狒狒本来就“应该”待在动物园中，因为动物园外“本来就是属于”人们居住的生活领域，所以叫牠“逃犯”；在狒狒的世界中，尚未被某一只狒狒拿在手中的食物，会是“谁都可以去拿的”，但是这只狒狒即便在“四下无人”时去拿取放在某张桌子上或是种在某块农园里的菜叶，就会被称作“小偷”，因为牠拿的那些菜叶，其实并不只是菜叶本身，而是被附加了“某人等一下要吃”或是“某人之后要拿去卖”的价值。<br><br>这只狒狒当然也不会知道，人类社会中有多少人“对待牠如一只狒狒”。试问，如果我们不认识牠、从未亲近过牠或牠的同族，又如何知道可以怎么合宜地对待一只狒狒呢？<br><br>所以，有人用对待“逃犯”的方式对待牠，出动大批人马追捕，要将牠“逮捕归案”；有人用对待“小偷”的方式对待牠，出声驱赶；有人视牠为会主动攻击人的“猛兽”，一见到牠就惊声尖叫，避之唯恐不及；有人视牠为某种“战利品”，以“胜利者”之姿与伤重蜷伏的牠<a href="https://news.ltn.com.tw/news/life/breakingnews/4253269">合照</a>；有人视牠为｢烫手山芋”，多次尝试跟牠撇清关系；也有人视牠为“自由斗士”，暗地为他喝采祝福；更多的人用“看戏”的态度来面对牠的存在，以“娱乐自己”的方式接收著相关报导，然后发布无关痛痒、自以为诙谐的留言。</p>
+<p>而我们从新闻中学习到的对应之道，是采取“跟牠保持距离”和“避免激怒牠”（以避免被攻击），但这又与我们用于某种紧张关系上的“自保之道”相去不远。而上述这些都反映出，我们在真正了解这只狒狒之前，甚至在有机会于行为上与牠亲近时，反而先在心中为牠贴满“标签”，选择与牠为敌。</p>
