--- a/_posts/2023-04-22-INITIUM-一个跨女的外型焦虑-我符合社会对性别的期望吗-能成为所追求的女生模样吗.html
+++ b/_posts/2023-04-22-INITIUM-一个跨女的外型焦虑-我符合社会对性别的期望吗-能成为所追求的女生模样吗.html
@@ -5,11 +5,11 @@ date: 2023-04-22 14:59:00.000000000 +00:00
 link: https://theinitium.com/article/20230423-hongkong-transgender-appearance-anxiety/
 categories: initium
 tags: blog
-author: 特约撰稿人 梁景鸿 发自香港
+author: 
 ---
 
-<p>「我寧願你叫我「八婆」，也不想你叫我「靚仔」。」</p><p>特约撰稿人 梁景鸿 发自香港</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-hongkong-transgender-appearance-anxiety/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/e8aecf7ccf5441e6bf3146932f485c4c.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="跨女Yui在一条粉红色的天桥上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">跨女Yui在一条粉红色的天桥上。<span class="credit">摄：林振东/端传媒</span></figcaption></figure><p><small>【编者按】不久前，日本演员桥本爱在社交平台发言，称在女浴室见到生理异性感到“恐怖”，再次引发有关跨性别权益的讨论。近年来，从JK罗琳关于跨性别的争议性发言、Elliot Page等跨性别明星出柜，到无性别卫生间倡导、性别重置手术与性别的制度认定等政治权益争取，跨儿群体在被更多看到的同时，也伴随著诸多犹疑与不理解。到底，性别是什么？</small></p>
+<p>「我寧願你叫我「八婆」，也不想你叫我「靚仔」。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-hongkong-transgender-appearance-anxiety/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/e8aecf7ccf5441e6bf3146932f485c4c.jpg?imageView2/1/w/1080/h/721/format/jpg" alt="跨女Yui在一条粉红色的天桥上。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">跨女Yui在一条粉红色的天桥上。</figcaption></figure><p><small>【编者按】不久前，日本演员桥本爱在社交平台发言，称在女浴室见到生理异性感到“恐怖”，再次引发有关跨性别权益的讨论。近年来，从JK罗琳关于跨性别的争议性发言、Elliot Page等跨性别明星出柜，到无性别卫生间倡导、性别重置手术与性别的制度认定等政治权益争取，跨儿群体在被更多看到的同时，也伴随著诸多犹疑与不理解。到底，性别是什么？</small></p>
 <p><small>跨性别权益与公共空间为何争议不断？顺性别女性担忧的对象究竟是谁？跨儿群体在经历怎样的药物与性别认同的挣扎？一张更改不了性别的身分证增加了多少生活困难？改变性别的制度认定为何障碍重重？</small></p>
 <p><small>3月31日国际跨性别现身日前后，端传媒组建“<a href="https://theinitium.com/tags/_3791/">跨儿现身</a>”专题，我们将讲述具体的生命故事，也将开展顺性别人士与跨儿的对话。我们试图在争议的漩涡中搭建一个平台，解构恐惧与不理解的不同切面，打开跨性别群体生存境况的透明柜子。</small></p>
 <p><small>今天是专题的第四篇，跨儿Yui的故事︰《一个跨女的外型焦虑》</small></p>
