--- a/_posts/2023-04-22-INITIUM-异乡人-告别对-乡-的执念-与现实交手.html
+++ b/_posts/2023-04-22-INITIUM-异乡人-告别对-乡-的执念-与现实交手.html
@@ -5,11 +5,11 @@ date: 2023-04-22 23:05:00.000000000 +00:00
 link: https://theinitium.com/article/20230423-mainland-overseas-student-confusion-over-identity/
 categories: initium
 tags: blog
-author: 特约撰稿人 阿籽 发自新加坡
+author: 
 ---
 
-<p>「我自知不能像他一样痛快地文科生转码，慢慢接近一种平静的生活。在混乱之中我能听见内心的低语：人呐，有没有不依赖国境的自由？」</p><p>特约撰稿人 阿籽 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-mainland-overseas-student-confusion-over-identity/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/e59382c62c4c4943a2a9aaacd23ee676.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="美国布鲁克林的一个码头，人们在排队观看曼哈顿天际线后面的日落。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">美国布鲁克林的一个码头，人们在排队观看曼哈顿天际线后面的日落。<span class="credit">摄：Lucas Jackson/Reuters/达志影像</span></figcaption></figure><p>毕业将至，过去数月我最常听到的问题是：你要留在美国，还是回中国？<br><br>这个问题好像一个旋转不停的陀螺，在我脑海中不知疲倦地打转。时不时的，我和身边的人都会给它抽上一鞭。中国解除疫情封控后的第一年，流动的自由似乎已经成为人们热衷谈起的珍稀品。许多国内朋友们都开始备考雅思、托福，一时间我感到自己好像置身人人向往的目的地。思索着是否回国的我，也自然成了一个古怪的人。<br><br>或许因为未在国内度过防疫最荒诞的一年，没有切身体会过随时可能失去自由的恐惧，在面临留下还是回国的人生关口时，我对在此地的失去更为敏感。在美国读研的两年，我意识到某些自由的远去。陪伴家人的自由、选择职业的自由、中文表达的自由、安全行走的自由、免于歧视的自由……有的自由看起来一点也不伟大，庸俗得很，可是我知道它们对我很重要。<br><br>朋友对我说，选择是关乎排序的游戏——在众多自由之中，我不能什么都要。随着地理位置移动的，还有我内心的价值排序。四海漂流让我审视内心，也重新认识我向往的自由。</p>
+<p>「我自知不能像他一样痛快地文科生转码，慢慢接近一种平静的生活。在混乱之中我能听见内心的低语：人呐，有没有不依赖国境的自由？」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-mainland-overseas-student-confusion-over-identity/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/e59382c62c4c4943a2a9aaacd23ee676.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="美国布鲁克林的一个码头，人们在排队观看曼哈顿天际线后面的日落。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">美国布鲁克林的一个码头，人们在排队观看曼哈顿天际线后面的日落。</figcaption></figure><p>毕业将至，过去数月我最常听到的问题是：你要留在美国，还是回中国？<br><br>这个问题好像一个旋转不停的陀螺，在我脑海中不知疲倦地打转。时不时的，我和身边的人都会给它抽上一鞭。中国解除疫情封控后的第一年，流动的自由似乎已经成为人们热衷谈起的珍稀品。许多国内朋友们都开始备考雅思、托福，一时间我感到自己好像置身人人向往的目的地。思索着是否回国的我，也自然成了一个古怪的人。<br><br>或许因为未在国内度过防疫最荒诞的一年，没有切身体会过随时可能失去自由的恐惧，在面临留下还是回国的人生关口时，我对在此地的失去更为敏感。在美国读研的两年，我意识到某些自由的远去。陪伴家人的自由、选择职业的自由、中文表达的自由、安全行走的自由、免于歧视的自由……有的自由看起来一点也不伟大，庸俗得很，可是我知道它们对我很重要。<br><br>朋友对我说，选择是关乎排序的游戏——在众多自由之中，我不能什么都要。随着地理位置移动的，还有我内心的价值排序。四海漂流让我审视内心，也重新认识我向往的自由。</p>
 <h2>异乡人集散地</h2>
 <blockquote>
 <p>我的应对办法，是放下家与乡的执念，不期待消除分别。何苦以异土为乡？毕竟越想要留下，越想要融入，就越会感到“异乡”和“漂泊”。</p>
