--- a/_posts/2023-04-23-INITIUM-不能说中国不好-不能说外国好-中国大陆出版业-逃避统治的艺术.html
+++ b/_posts/2023-04-23-INITIUM-不能说中国不好-不能说外国好-中国大陆出版业-逃避统治的艺术.html
@@ -5,11 +5,11 @@ date: 2023-04-23 09:17:00.000000000 +00:00
 link: https://theinitium.com/article/20230424-mainland-publishing-industry/
 categories: initium
 tags: blog
-author: 特约撰稿人 Michelle Zhang 发自新加坡
+author: 
 ---
 
-<p>「2022年中国大陆出版的新书品种数较2021年减少2.5万种，其中原创新书减少5000种，引进新书减少2万种。」</p><p>特约撰稿人 Michelle Zhang 发自新加坡</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-mainland-publishing-industry/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/c2296b3b93f84f40b4845afee21aa7ff.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年4月10日，广州一间书店的入口摆放《习近平谈治国理政》销售。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2023年4月10日，广州一间书店的入口摆放《习近平谈治国理政》销售。<span class="credit">摄：LCT/端传媒</span></figcaption></figure><p>《叫魂：1768年中国妖术大恐慌》（下称《叫魂》）继续在北京万圣书园2023年3月的畅销书排行榜中占有一席之地。</p>
+<p>「2022年中国大陆出版的新书品种数较2021年减少2.5万种，其中原创新书减少5000种，引进新书减少2万种。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-mainland-publishing-industry/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/c2296b3b93f84f40b4845afee21aa7ff.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2023年4月10日，广州一间书店的入口摆放《习近平谈治国理政》销售。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2023年4月10日，广州一间书店的入口摆放《习近平谈治国理政》销售。</figcaption></figure><p>《叫魂：1768年中国妖术大恐慌》（下称《叫魂》）继续在北京万圣书园2023年3月的畅销书排行榜中占有一席之地。</p>
 <p>自2022年5月登顶中国大陆这一最知名独立书店每月畅销书榜首以来，《叫魂》已连续上榜11个月。</p>
 <p>《叫魂》于1990年首次出版，该书描写了清朝乾隆年间一项名为”叫魂“的妖术引发的社会恐慌，重点分析了事件背后从帝王到基层官员之间多层级官僚的运作机制，展示了恐慌与流言如何搅动”盛世“的王朝政治。对于这本书至今被读者追捧的现象，书评作者吴清翔评价道，这就是图书的生命力所在，“当然在有些人眼中，这也正是图书恐怖的地方”，他补充说。<br><br>与《叫魂》在万圣书园的霸屏截然相反，中信书店和西西弗书店这两家大型连锁书店早在2022年10月前后便已将该书悄然撤下。<br><br>而与有形的消亡相比，无形的消失更易蛊惑人心。<br><br>2023年3月，中国大陆一家专注图书行业咨询的商业机构发布《2022年图书零售市场年度报告》，显示2022年中国大陆出版的新书品种数相较2021年减少2.5万种，其中原创新书减少5000种，引进新书减少2万种。<br><br>新书品种的减少对大众而言无从觉察，但获得出版资格的图书所传递的内核却在潜移默化中慢慢渗透进公众认知的肌理。<br><br>对于减少的新书品类，多位图书编辑总结称，近两年来，大环境所迫，出书的一大原则是“不能说中国不好，以及不能说外国好”。<br><br>万圣书园的创办人刘苏里将图书出版行业面临的这种境况形容为“水已经淹到了脖子”。作为万圣书园的创始人，他在竭力呼吁出版机构不要让一些书消失，“要让知识的池子、思想观念的池子、艺术文化的池子，保持一定的浓度，这样在有人愿意跳到池子里后，才不至于喘不过气”。</p>
 <h2>被垄断的叙事权力</h2>
