--- a/_posts/2023-04-23-INITIUM-早报-中国驻法大使卢沙野质疑前苏联国家主权惹国际争议.html
+++ b/_posts/2023-04-23-INITIUM-早报-中国驻法大使卢沙野质疑前苏联国家主权惹国际争议.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230424-morning-brief/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/53b212ef4c1e4de3997b7f51cf6317f6.jpeg?imageView2/1/w/1080/h/720/format/jpg" alt="2019年8月29日，法国巴黎，中国驻法国大使卢沙野出席MEDEF工会夏季论坛。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2019年8月29日，法国巴黎，中国驻法国大使卢沙野出席MEDEF工会夏季论坛。<span class="credit">摄：Benoit Tessier/Reuters</span></figcaption></figure><h3>中国驻法大使卢沙野质疑前苏联国家主权惹国际争议</h3>
+            <figcaption itemprop="caption">2019年8月29日，法国巴黎，中国驻法国大使卢沙野出席MEDEF工会夏季论坛。</figcaption></figure><h3>中国驻法大使卢沙野质疑前苏联国家主权惹国际争议</h3>
 <p>据<a href="https://www.reuters.com/world/europe/france-baltic-states-dismayed-after-china-envoy-questions-ukraine-sovereignty-2023-04-23/">路透社报导</a>，法国、乌克兰及波罗的海三国爱沙尼亚、拉脱维亚和立陶宛对中国驻法国大使卢沙野质疑前苏联国家主权的言论表示失望，呼吁中方回应此事。</p>
 <p>在法国电视台的访谈节目中，卢沙野在被问及是否认为克里米亚属于乌克兰时表示，克里米亚曾是俄罗斯的一部分，后来由前苏联领导人赫鲁晓夫赠予乌克兰。</p>
 <p>他还进一步声称，由于没有国际协议确定这些前苏联国家的主权地位，因此它们在国际法上并无实际地位。</p>
