--- a/_posts/2023-04-22-INITIUM-郭文贵诈骗案-追随者讲述如何被吸引入局.html
+++ b/_posts/2023-04-22-INITIUM-郭文贵诈骗案-追随者讲述如何被吸引入局.html
@@ -5,11 +5,11 @@ date: 2023-04-22 20:30:00.000000000 +00:00
 link: https://theinitium.com/article/20230423-wsj-followers-describe-allure-of-chinese-businessman-charged-with-billion-fraud/
 categories: initium
 tags: blog
-author: 华尔街日报
+author: 
 ---
 
-<p>「中国流亡商人郭文贵被指控牵头策划了一个骗局，一些追随者称正协助联邦政府调查，也在思考是如何被郭文贵蒙骗的。」</p><p>华尔街日报记者 Sha Hua</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-wsj-followers-describe-allure-of-chinese-businessman-charged-with-billion-fraud/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/a4dcf70f1dea43bf92d958559277be3f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2018年11月20日，郭文贵在美国纽约与班农举行新闻发布会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption">2018年11月20日，郭文贵在美国纽约与班农举行新闻发布会。<span class="credit">摄：Carlo Allegri/Reuters/达志影像</span></figcaption></figure><p><strong>本文原刊于《华尔街日报》，端传媒获授权转载。目前，《华尔街日报》中文版全部内容仅向付费会员开放，我们强烈推荐您<a href="https://theinitium.com/subscription/premium/?utm_source=initium&utm_medium=article&utm_campaign=wsjselection">购买/升级成为“端传媒尊享会员”</a>，以低于原价 70% 的价格，畅读端传媒和《华尔街日报》全部内容。</strong></p>
+<p>「中国流亡商人郭文贵被指控牵头策划了一个骗局，一些追随者称正协助联邦政府调查，也在思考是如何被郭文贵蒙骗的。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230423-wsj-followers-describe-allure-of-chinese-businessman-charged-with-billion-fraud/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/a4dcf70f1dea43bf92d958559277be3f.jpg?imageView2/1/w/1080/h/720/format/jpg" alt="2018年11月20日，郭文贵在美国纽约与班农举行新闻发布会。" itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            <figcaption itemprop="caption">2018年11月20日，郭文贵在美国纽约与班农举行新闻发布会。</figcaption></figure><p><strong>本文原刊于《华尔街日报》，端传媒获授权转载。目前，《华尔街日报》中文版全部内容仅向付费会员开放，我们强烈推荐您<a href="https://theinitium.com/subscription/premium/?utm_source=initium&utm_medium=article&utm_campaign=wsjselection">购买/升级成为“端传媒尊享会员”</a>，以低于原价 70% 的价格，畅读端传媒和《华尔街日报》全部内容。</strong></p>
 <p>Liu Jun曾破除层层阻力才把钱投给中国流亡商人郭文贵，后者凭借中国政府的政治阴谋故事和丰厚的投资回报承诺吸引了大批追随者。</p>
 <p>这位53岁的东京家庭主妇说，当初她打算给郭文贵转账时，曾遭丈夫的各种反对和劝阻，丈夫甚至威胁要离婚。她说，她当时尝试通过银行转账投资郭文贵推销的一项业务时，许多家银行都拒绝了这项交易，并警告称这可能是个骗局。</p>
 <p>她说，她当时没有理会这些担心，在2020年5月从她的毕生积蓄中转出了35,000美元。她甚至劝说银行员工一起投资。</p>
