--- a/_posts/2023-04-24-INMEDIA-乙丙組足球賽事與飛盤公開賽-撞場-康文署-沒租予足總使用.html
+++ b/_posts/2023-04-24-INMEDIA-乙丙組足球賽事與飛盤公開賽-撞場-康文署-沒租予足總使用.html
@@ -9,8 +9,8 @@ author: 獨媒報導
 ---
 
 <img src="https://www.inmediahk.net/files/column_images/10%201280_4.png" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">（獨媒報導）</font>跑馬地遊樂場周日（23日）下午出現「撞場」，由飛盤總會主辦的香港飛盤公開賽，早上9點至傍晚7點在該場地舉行。足總主辦的兩場乙、丙組聯賽賽事，亦「聲稱」租用了同一場地，賽事最後因「撞場」未能如期進行。康文署回覆《獨媒》查詢時表示，並沒有將有關段節租予足總使用。</p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1215807C17" title="無標題"><img src="https://live.staticflickr.com/65535/52842797388_4753049e3b_b.jpg" width="1024" alt="無標題" /></a><br /><em>福建</em></p>
-<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/64U535E132" title="無標題"><img src="https://live.staticflickr.com/65535/52841781047_16b88d2551_b.jpg" width="1024" alt="無標題" /></a><br /><em>荃灣</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/1215807C17" title="無標題"><img src="https://live.staticflickr.com/65535/52842797388_4753049e3b_b.jpg" width="1024" alt="無標題" /></a><br /><em>福建 Facebook 圖片</em></p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/64U535E132" title="無標題"><img src="https://live.staticflickr.com/65535/52841781047_16b88d2551_b.jpg" width="1024" alt="無標題" /></a><br /><em>荃灣足球會Facebook 圖片</em></p>
 <p>根據足總網站顯示，丙組聯賽即福建及荃灣的賽事，安排下午1點半，在跑馬地遊樂場人造草地足球場一號球場進行，但兩支球隊到達球場後卻發現「撞場」，飛盤總會正在使用該場地，舉行香港飛盤公開賽。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/94k2P81742" title="螢幕擷取畫面 2023-04-24 214048"><img src="https://live.staticflickr.com/65535/52842825073_a9c21b2671_b.jpg" width="1024" alt="螢幕擷取畫面 2023-04-24 214048" /></a><br /><em>丙組聯賽賽程</em></p>
 <p>福建在Facebook 專頁發文，指球員、球證及場監均已到齊，但卻未能開波，一眾職球員最後轉往飲茶。荃灣足球會則在Facebook 專頁指，「由於康文署出錯」，雙方球員到場後才發現原來場地已經租借予飛盤總會，正等待足總決定。荃灣及後再引述足總的場監指，康文署將場地分別租借給飛盤總會及足球總會，並取消今場比賽，擇日進行補賽。</p>
