--- a/_posts/2023-04-25-INITIUM-动员令后的大迁徙-俄罗斯人都逃到哪里去了-一分钟数洞.html
+++ b/_posts/2023-04-25-INITIUM-动员令后的大迁徙-俄罗斯人都逃到哪里去了-一分钟数洞.html
@@ -9,7 +9,7 @@ author:
 ---
 
 <p>「有70万至100万俄罗斯人在宣布动员后的两周内离开俄罗斯。」</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230426-dataphile-russian-migration-after-mobilization/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/04/f4f0df4a88014d76806b92c10ab2fa12.png?imageView2/1/w/1080/h/720/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"></figcaption></figure><p><small>“一分钟数洞”将有趣﹑有用的数据和资料，以易懂又好读的方式呈现给读者。请按此订阅数洞栏目。</small></p>
+            <figcaption itemprop="caption"></figcaption></figure><p><small>“一分钟数洞”将有趣﹑有用的数据和资料，以易懂又好读的方式呈现给读者。请<a href="https://theinitium.com/channel/data">按此订阅</a>数洞栏目。</small></p>
 <p><strong>阅读时长：1分钟</strong></p>
 <p><strong>（Yanina Sorokina：数据记者，关注俄罗斯政经议题。）</strong></p>
 <p>去年9月21日，俄罗斯总统普京宣布为乌克兰战争进行“局部”全国性动员的那一天，前往几个没有签证要求的国家的机票被全部卖光。宣布动员后不久，俄罗斯各边境上开始出现长龙。在其中一些地方，如俄罗斯和格鲁吉亚之间的陆路边界，俄罗斯人在边境排上一个星期才能离开国境。</p>
