--- a/_posts/2023-04-27-INMEDIA-黃偉綸稱香港記者前途不錯-可如問責官員享中產生活.html
+++ b/_posts/2023-04-27-INMEDIA-黃偉綸稱香港記者前途不錯-可如問責官員享中產生活.html
@@ -18,6 +18,7 @@ author: 獨媒報導
 <p>黃偉綸又稱已經決定入行的學生「揀啱咗」，指雖然在香港做記者要捱苦，但同時亦是一個鍛鍊：「嗱，開頭要捱下嘅，呢個香港新聞界情況啦，開頭個待遇變咗比較刻苦一啲，但其實做記者，特別今天講商業新聞，係一個好好嘅鍛鍊場嚟。」</p>
 <p><strong>笑言記者與問責官員都不會大富大貴</strong></p>
 <p>他解釋，記者比其他人知道更多事情，商業觸覺亦會變得敏感，「你自己投資都可能叻啲啦」，自己亦見到無論留守傳媒界，抑或轉任公關的人士前景都不錯，並笑言：「會唔會大富大貴？就唔會嘅，同做問責官員一樣，你都係有個合理中產生活水平嘅啫。」</p>
-<p>黃偉綸在上屆政府擔任發展局局長，而現屆政府增設3名副司長職位，包括政務司副司長、財政司副司長及律政司副司長。政府當時在文件中指出，副司長的薪酬定於司長與局長的中間，即每月363,400元，較局長高6,000元。在頒獎禮上，黃偉綸更逐一點名台下其他嘉賓，例如有線新聞前執行董事趙應春、《信報》總編輯郭豔明，指他們「全部唔係身光頸靚，穿金戴銀，但都係好健康，一個好合理嘅生活，有尊嚴嘅生活！個個都幾好㗎。」他又反駁有人指做記者很凄慘，「唔好信佢，你努力做，前途係會幾好㗎。」</p>
+<p>在頒獎禮上，黃偉綸更逐一點名台下其他嘉賓，例如有線新聞前執行董事趙應春、《信報》總編輯郭豔明，指他們「全部唔係身光頸靚，穿金戴銀，但都係好健康，一個好合理嘅生活，有尊嚴嘅生活！個個都幾好㗎。」他又反駁有人指做記者很凄慘，「唔好信佢，你努力做，前途係會幾好㗎。」</p>
+<p>黃偉綸在上屆政府擔任發展局局長，而現屆政府增設3名副司長職位，包括政務司副司長、財政司副司長及律政司副司長。政府當時在文件中指出，副司長的薪酬定於司長與局長的中間，即每月363,400元，較局長高6,000元。</p>
 <p>行會召集人兼新民黨立法會議員葉劉淑儀曾批評政府新聞稿冗長難明，黃偉綸稱新聞處正學習精簡內容，又強調有時發佈新聞稿「唔係為咗自己講，係希望對方聽咗明白或者記得」。</p>
 </div></div></div>
