--- a/_posts/2023-04-27-PQ-退輔會副主委李文忠-蔣銅像防失智-民團呼籲政院撤換副主委.html
+++ b/_posts/2023-04-27-PQ-退輔會副主委李文忠-蔣銅像防失智-民團呼籲政院撤換副主委.html
@@ -20,7 +20,7 @@ author: 江 珀石
 
 
 
-<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045.jpeg" alt="" class="wp-image-134501" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045.jpeg 988w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045-300x233.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045-768x597.jpeg 768w" sizes="(max-width: 602px) 100vw, 602px" /><figcaption>現任退輔會副主委李文忠（左），於任內多次發言反對拆除蔣介石銅像，並視蔣經國為偉人，明顯有違轉型正義的政策方向。（圖／中央社）</figcaption></figure></div>
+<div class="wp-block-image"><figure class="aligncenter size-full is-resized"><img loading="lazy" src="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045.jpeg" alt="" class="wp-image-134501" srcset="https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045.jpeg 988w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045-300x233.jpeg 300w, https://storage.googleapis.com/stateless-34-84-11-249/2023/04/86a15b61-988x768_20221110000045-768x597.jpeg 768w" sizes="(max-width: 602px) 100vw, 602px" /><figcaption>現任退輔會副主委李文忠（左），於任內多次發言反對拆除蔣介石銅像，並視蔣經國為偉人，明顯有違轉型正義的政策方向。（圖／中央社）</figcaption></figure></div>
 
 
 
