Update VOCUS 2023-04-30 patch

--- a/_posts/2023-04-25-VOCUS-一射千金-pornhub的故事-色色和道德邊緣的故事.html
+++ b/_posts/2023-04-25-VOCUS-一射千金-pornhub的故事-色色和道德邊緣的故事.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">本身有在相關業界從事的經驗，但日本情色產業跟在歐美的狀況有些落差，比起歐美幾年前情色片在網路平台的興盛，日本則還是傳統以實體片販售為主要銷售導向，只有較大的廠商有經營或跟外國的平台談銷售分潤，因為多數日本情色行業還是以公司為導向，並且一些女優被當成藝人被培養，故在之前日本發佈AV新法時，因為業界完全沒參與討論，引發女優男優和製片公司的危機，而被許多業內人是反對。</div>
 <div class="draft-block draft--p left">不過近年日本情色明星也開始使用影音自媒體拍片經營，也有許多老牌公司開始採用自己網站的影音媒體，但還是無法堵絕外流跟盜版的狀況，這點如同被偷拍或是受害者請平台下架影片，卻永遠刪除不完。</div>
 <div class="draft-block draft--p left">怎麼堵絕這惡行其實平台方是有方法的，但是礙於影片觀看高就等於廣告收益，也使很多狀況讓公司上層睜一眼閉一眼，而銀行斷源的做法卻也只是苦了底層的性工作者。可以說到最後性工作者與被害者的保障與正義未到，但宗教集團與情色公司上層依舊賺取人氣與金錢，這才是色色的好生意不是嗎？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/WTAay-4QUuY"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/WTAay-4QUuY"></iframe></div>
