--- a/_posts/2023-05-02-INMEDIA-灣仔離島僅設一選區-直選區議員減剩二人.html
+++ b/_posts/2023-05-02-INMEDIA-灣仔離島僅設一選區-直選區議員減剩二人.html
@@ -8,7 +8,7 @@ tags: blog
 author: 獨媒報導
 ---
 
-<img src="https://www.inmediahk.net/files/column_images/tt_6.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府今日（2日）<a href="https://bit.ly/3oX1Uqm">區議會改革方案</a>，其中地區直選議席大減至只有88席，全港亦重新劃成44個選區，其餘355個議席則由地區間選及委任而來。政府傍晚向立法會提交文件，進一步解釋18區議席數目及新選區劃界，在「新區議會」下，原本有13個選區的區灣仔區及10個選區的離島區均合併成一個選區，直選議員亦大減至只有2人。</p>
+<img src="https://www.inmediahk.net/files/column_images/tt_6.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="#e4692b">【獨媒報導】</font>政府今日（2日）<a href="https://bit.ly/3oX1Uqm">區議會改革方案</a>，其中地區直選議席大減至只有88席，全港亦重新劃成44個選區，其餘355個議席則由地區間選及委任而來。政府傍晚向立法會提交文件，進一步解釋18區議席數目及新選區劃界，在「新區議會」下，原本有13個選區的灣仔區及10個選區的離島區均合併成一個選區，直選議員亦大減至只有2人。</p>
 <p><img src="https://live.staticflickr.com/65535/52865088191_48ca2558d6_b.jpg" /></p>
 <p><strong>各區重新合併 直選議席大縮水</strong></p>
 <p>在「新區議會」下，委任及地區間選分別佔179及176席，地區直選則由452席大減至僅餘88席，並改行雙議席單票制，另加27席當然議員﹐全港452個選區亦會重劃成44個，意味各區議席數目「大洗牌」。根據文件，原本分別有13個民選議席的灣仔區及10個民選議席的離島區將只設一個選區，減至只有2名直選議員。</p>
