--- a/_posts/2023-05-03-INMEDIA-投考警員取消最低身高及體重要求-另設-警員中英文筆試.html
+++ b/_posts/2023-05-03-INMEDIA-投考警員取消最低身高及體重要求-另設-警員中英文筆試.html
@@ -10,8 +10,10 @@ author: 獨媒報導
 
 <img src="https://www.inmediahk.net/files/column_images/202305031.jpg" /><div class="field field-name-body field-type-text-with-summary field-label-hidden"><div class="field-items"><div class="field-item even"><p><font color="red">【獨媒報導】</font>香港警務處近年招聘欠理想，根據公務員事務局今年2月向立法會提交的文件，顯示空缺達6,312個，佔編制達18%。<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E8%AD%A6%E9%9A%8A%E6%8B%9B%E8%81%98%E6%95%B8%E5%AD%97%E5%89%B53%E5%B9%B4%E6%96%B0%E4%BD%8E-%E8%B5%B4%E5%85%A7%E5%9C%B0%E5%A4%A7%E5%AD%B8%E3%80%8C%E6%90%B6%E4%BA%BA%E6%89%8D%E3%80%8D">去年亦只成功招聘654人</a>，未達目標一半。警務處今日公布將於5月5日起調整入職要求，取消最低身高及體重要求、以及取消不配戴矯視工具的視覺敏銳度測試。此外又增設「警員中英文筆試」，合格可視為符合語文要求。換言之5月5日後投考警員，不再需要在文憑試中文及英文取得第2級以上成續。</p>
 <p>警隊人手一直備受關注，其流失率在2019/20達新高的4.46%，及後連續三年下跌至去年度的2.89％，流失人數為806人。至於招聘方面，去年度亦創下三年新低，只成功招聘654人。<a href="https://www.inmediahk.net/node/%E6%94%BF%E7%B6%93/%E8%95%AD%E6%BE%A4%E9%A0%A4%EF%BC%9A%E5%8B%9E%E5%8B%95%E4%BA%BA%E5%8F%A3%E4%B8%8B%E9%99%8D%E5%BD%B1%E9%9F%BF%E8%AD%A6%E9%9A%8A%E6%8B%9B%E8%81%98-%E6%9C%AC%E6%9C%88%E5%85%AC%E5%B8%83%E5%8F%8D%E4%BF%AE%E4%BE%8B%E9%A4%98%E4%B8%8B%E7%B4%846000%E6%A1%88%E4%BB%B6%E8%99%95%E7%90%86">警務處處長蕭澤頤曾稱</a>，勞動人口下降影響警隊招聘。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4UN80x1C5F" title="Untitled"><img src="https://live.staticflickr.com/65535/52836200695_0ecee233a4_z.jpg" alt="Untitled" /></a></p>
 <p>香港警務處今日宣布，將從5月5日調整入職要求，稱為「保持警隊在人力資源市場的競爭力，並進一步提升招聘效率」。其中最低身高及體重要求方面，目前男性需至少達163厘米，體重至少50公斤；女性則為至少152厘米，體重至少42公斤，兩個要求皆會取消。</p>
 <p>此外，戴眼鏡人士亦可投考警員，但必須在不配戴矯視工具下通過視力測驗。相關要求亦會取消，改為可在配戴眼鏡或隱形眼鏡的情況下通過視力測驗。</p>
 <p>語文能力方面，目前警員需至少獲香港中學文憑試中文及英文第2級或以上成續，如未符最低中文能力要求，惟需與公務員考試組舉辦的政府語文考試並需取得合格。相關要求在5月5日起亦將調整，警務處將增設「警員中英文筆試」，筆試以文憑試第2級為基準，分為中文運用及英文運用兩份試卷，通過者會視為符合語文能力要求並永久有效。</p>
+<p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/EZ7BA01Q91" title="Untitled"><img src="https://live.staticflickr.com/65535/52835963849_eff8deae42_z.jpg" alt="Untitled" /></a></p>
 <p>警方發言人表示，警隊一向採取積極主動的招募策略，吸引質素卓越及具備作為警務人員所需才能的人士投考，警方會與時並進，不時檢視招募政策，並續透過不同渠道宣傳。</p>
 </div></div></div>
