Update VOCUS 2023-05-04 patch

--- a/_posts/2023-04-30-VOCUS-spring-與-春-春季-春天-春青期-二四月間-泉源-源根-釋放-爆炸-現乍-蠢動-彈簧-彈力-快輕-出彈-等的橋接.html
+++ b/_posts/2023-04-30-VOCUS-spring-與-春-春季-春天-春青期-二四月間-泉源-源根-釋放-爆炸-現乍-蠢動-彈簧-彈力-快輕-出彈-等的橋接.html
@@ -22,7 +22,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring = 2ph兩ㄧ⺆間&nbsp;=&nbsp;二fㄧㄧ⺆間&nbsp;=&nbsp;二four二⺆間&nbsp;=&nbsp;二四月間</span>，意指「二到四月間」或「二、三、四月的三個月之期間」。其中&nbsp;s&nbsp;通過左右鏡射約略象徵數字&nbsp;2，p&nbsp;代表&nbsp;ph&nbsp;再作後續轉換，g&nbsp;約略形聲漢語「間」的起音。當然，嚴格來講&nbsp;s&nbsp;應是代表&nbsp;second，f&nbsp;則應是代表&nbsp;forth。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring =&nbsp;水point兩ㄧㄇ結&nbsp;=&nbsp;水點ㄧㄧㄇ結&nbsp;=&nbsp;水丶日結&nbsp;=&nbsp;水白結&nbsp;=&nbsp;泉</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring =&nbsp;豎平連點ㄇ泉&nbsp;=&nbsp;丨一連丶ㄇ泉&nbsp;=&nbsp;ㄒ丶ㄇ泉&nbsp;=&nbsp;泉泉&nbsp;=&nbsp;泉</span>，此時其中的符號「ㄒ丶ㄇ」之組合是約略描述漢字「泉」的篆文字體，字尾&nbsp;g&nbsp;通過字母本音約略形聲台閩語「泉」的&nbsp;züá&nbsp;式發音之起音再轉音。</div>
-<div class="draft-block draft--p left"></div>
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/fba07e91-665a-49a3-9864-9c9784dc86b4.png" data-width="1440" data-height="760" data-position="center" src="https://images.vocus.cc/fba07e91-665a-49a3-9864-9c9784dc86b4.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><span style="font-weight: bold; ">【附圖：漢字「泉、湶、原、源、厡、洤」字形演化】</span></figcaption></div></figure>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring =&nbsp;三point兩點ㄇ水&nbsp;=&nbsp;三點二丶ㄇ水&nbsp;=&nbsp;氵白水&nbsp;=&nbsp;氵泉&nbsp;or&nbsp;水泉&nbsp;or&nbsp;水白水&nbsp;=&nbsp;湶&nbsp;or&nbsp;水泉&nbsp;or&nbsp;泉水</span>，意通「泉」或「水原」，此因<span style="font-weight: bold; ">清代</span><span style="text-decoration: underline; font-weight: bold; ">陳昌治</span><span style="font-weight: bold; ">刻本《說文解字》記載「泉，水原也。象水流出成川形。凡泉之屬皆从泉。疾緣切〖注〗洤，古文。」</span>。其中&nbsp;g&nbsp;約略形聲台閩語「水」的&nbsp;zuì&nbsp;式發音之起音。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring =&nbsp;三point厂氵聯ℊ=&nbsp;三點厂水聯白&nbsp;=&nbsp;氵厂泉&nbsp;=&nbsp;水厡&nbsp;=&nbsp;水原&nbsp;=&nbsp;氵原&nbsp;=&nbsp;源</span>，此時又意通漢字「源」的部份含意及前述《說文解字》提到的「<span style="font-weight: bold; ">水原</span>」(意通「泉」)，並且「水原」一詞又意通後世的「<span style="font-weight: bold; ">水源</span>」一詞。所以，既然&nbsp;spring&nbsp;可以直接與漢字「水源」橋接，那麼漢字「水源路」就可能十分精簡地另外寫爲&nbsp;Spring Road&nbsp;來搭配即可，不一定要採用&nbsp;ShueiYuan Road&nbsp;或&nbsp;ZuiWuan Road&nbsp;這類既生硬冗長，而且不太公平的侷限在轉譯某種特定的漢語口音、卻又不完全精確道地的音標式拼音文字。</div>
@@ -70,7 +69,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring = sspring =&nbsp;射spring =&nbsp;射彈</span>，此時即「彈射」的同義倒裝詞。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring = springg&nbsp;省一個&nbsp;g = spring震&nbsp;=&nbsp;彈震</span>，或爲「震彈」的同義倒裝詞。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spring = sppringg&nbsp;省一個&nbsp;p&nbsp;省一個&nbsp;g = sp.power.rin重g = sp力rin重g = spring +&nbsp;力重&nbsp;=&nbsp;彈&nbsp;+&nbsp;動&nbsp;=&nbsp;彈動</span>，或爲「動彈」的同義倒裝詞。例如「動彈不得」也可能說是&nbsp;can’t get to spring (可能不得以彈動，意通「不可能得以動彈」)。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-cvb2t"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">sprang：spring已</span>，此字爲&nbsp;spring&nbsp;之動詞的過去式。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">sprung：spring完</span>，此字爲&nbsp;spring&nbsp;之動詞的完成式。</div>
@@ -83,10 +81,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">springboard：彈板；簧板；彈簧板；簧片板；簧震板；彈力板；彈起板；彈跳板；出彈板；彈震板；彈動板；射彈板</span>。包括游泳池設施中的「跳水板」或其它帶有彈性力量的板狀物都可能是一種&nbsp;springboard。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">springhead：源頭；源根启頭；源根開頭。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">spa：水医</span>，類似「水醫」或「水療」，即 <span style="font-weight: bold; ">spa =&nbsp;水ㄈA =&nbsp;水ㄈ矢&nbsp;=&nbsp;水医&nbsp;=&nbsp;水醫；泉医</span>，此時&nbsp;s&nbsp;代表&nbsp;spring (泉)<span style="font-weight: bold; ">；水美医</span>，類似「水療式醫美」，此時&nbsp;p&nbsp;同時約略形聲台閩語「美」的起音<span style="font-weight: bold; ">；泉美医；湶美医；洤美医；湶美医業</span>，此時&nbsp;a&nbsp;同時約略形聲漢語「業」<span style="font-weight: bold; ">；洤美医業；湶美医地</span>，此時&nbsp;a&nbsp;同時代表&nbsp;area (地區)&nbsp;而轉換漢字「地」<span style="font-weight: bold; ">；洤美医地</span>。其中漢字「洤」即同前述意通漢字「湶」、「泉」、「源」、「水原」之類。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p center"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/3ticn0QrQwc"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/3ticn0QrQwc"></iframe></div>
 <div class="draft-block draft--p center"><a href="https://youtu.be/3ticn0QrQwc" target="_blank" class="draft--a"><span style="font-weight: bold; ">https://youtu.be/3ticn0QrQwc</span></a></div>
 <div class="draft-block draft--p center"><span style="font-weight: bold; ">【附影片：Willie Nelson - First Rose of Spring (Official Lyric Video) /&nbsp;分享自&nbsp;YouTube】</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
