--- a/_posts/2023-04-30-VOCUS-居家裝潢大驚奇-室內另闢天地.html
+++ b/_posts/2023-04-30-VOCUS-居家裝潢大驚奇-室內另闢天地.html
@@ -46,4 +46,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">以我自己個人的觀點來說《居家裝潢大驚奇》不是我喜歡的裝潢實境節目的風格，自己滿喜歡看裝潢過程中建築師或設計師如何克服一些製作上的難關。</div>
 <div class="draft-block draft--p left">像是日本長青節目《全能住宅改造王》或是比較新網路串流節目《老舊汽旅大翻新》，都會很細緻的在設計過程考慮經費與實作，但《居家裝潢大驚奇》就比較像是走馬看花的塞入很多景點的旅行團流程，很難了解住戶如何改造或為何要這樣做的各種考究。</div>
 <div class="draft-block draft--p left">其中我不太喜歡節目將一些裝潢納入其中，例如富豪式的裝潢，既不是屋主親自改造也非親手建照，只是花錢買下高級的素材，改造過程也不有趣，感覺就是普通的居家裝潢，沒有所謂的「驚奇感」。但如果想看一些特殊有趣的室內裝潢，我覺得這節目基本還是能滿足一些客群，滿足獵奇感與趣味性，但作為細緻的室內裝潢節目的話，我認為無疑是我現在看過不太可以的設計節目。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/ia-Hclo-ITs"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/ia-Hclo-ITs"></iframe></div>
