--- a/_posts/2023-05-03-VOCUS-扶桑花女孩之舞-日本小夏威夷.html
+++ b/_posts/2023-05-03-VOCUS-扶桑花女孩之舞-日本小夏威夷.html
@@ -48,4 +48,4 @@ author: 陸坡 (LUPO)
 <div class="draft-block draft--p left">不過故事走向偏向平淡，且姊姊與妹妹之間的羈絆雖然有許多段特地描繪，但我覺得情感詮釋還是不夠到位，可以說減少一些地方設施的介紹，花時間專注描繪姊妹情誼，會讓整個故事線，更完整一點。</div>
 <div class="draft-block draft--p left">此外也許是當時技術還未到非常好，在採用3D動畫人物模組的時候，整體來說有點假假的，但因為舞蹈動作姿勢不大，反而流暢感是好的。</div>
 <div class="draft-block draft--p left">動畫一直是日本的強項，而這次不管是知名導演的電影動畫，或是地方政府結合動畫公司原創的地方觀光與都市振興，我覺得目前都還未有太過落漆的作品，反而有不少地方經濟觀光的原創作品，讓人意外的能接受，觀影體驗也很不錯。在北國日本的夏威夷情懷，這種疫情退散後的宣傳意外的讓人想體驗一下，溫泉扶桑的樂趣。</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/TcaeO3Xb15w"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/TcaeO3Xb15w"></iframe></div>
