--- a/_posts/2023-05-03-VOCUS-搬舊文-上主雖沉默-卻在一旁.html
+++ b/_posts/2023-05-03-VOCUS-搬舊文-上主雖沉默-卻在一旁.html
@@ -18,13 +18,8 @@ author: Hiroshi LIM
 <div class="draft-block draft--p left">但，我信，上主他雖沉默，卻在一旁。</div>
 <div class="draft-block draft--p left">－</div>
 <blockquote class="draft-block draft--blockquote"><span style="font-weight: bold; ">我們的雙手緊握<br>在黑暗中 我不會把你放開<br>小心翼翼地走著<br>再過不久 一定就能看見光<br><br>—〈光〉，鄭宜農</span></blockquote>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/UYpcJP5OLcQ"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/UYpcJP5OLcQ"></iframe></div>
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block"><span style="font-weight: bold; ">原刊於 2022 年 5 月 3 日 18:01 個人臉書頁面貼文</span></pre></pre>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">　Su-hong<br>　書寫於台灣．高雄．灣仔內<br> <br>　2023.05.03　23：53　移植重版</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p center"><span style="font-style: italic; ">（本文初版原發表於個人臉書頁，網址：</span><a href="https://www.facebook.com/lim.hiroshi/posts/pfbid024qAiPoZBvfZ3ZkbypnRwNnDvyVzkQ2S8ZLHHgvf8FneoFaDog8Y1jpMyVJGYfqYGl" target="_blank" class="draft--a"><span style="font-style: italic; ">https://www.facebook.com/lim.hiroshi/posts/pfbid024qAiPoZBvfZ3ZkbypnRwNnDvyVzkQ2S8ZLHHgvf8FneoFaDog8Y1jpMyVJGYfqYGl</span></a><span style="font-style: italic; ">）</span></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
