--- a/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-10-帝國的幽靈-俄羅斯為何走到這一步.html
+++ b/_posts/2023-03-05-VOCUS-俄烏戰爭一年總檢討-10-帝國的幽靈-俄羅斯為何走到這一步.html
@@ -36,7 +36,7 @@ author: 王立第二戰研所
 <h3 class="draft-block draft--h3" name="header-7arov">俄羅斯為何無法「脫亞入歐」、「悶聲發財」？</h3>
 <div class="draft-block draft--p left">說穿了，俄國要改變也不是不能，就是向西方體制認輸，開始真正的歐化，做東歐現在正在做的事情，徹底加入以美國為首的貿易體制。</div>
 <div class="draft-block draft--p left">這在蘇聯解體後幾年還可以，後來就很難做到了，民族主義被激起後更難，<span style="font-weight: bold; ">如果您認為普京為了俄羅斯長期著想應該要這樣做，那去看看習近平吧</span>，為何要挑戰美國海權？乖乖當資本主義的工廠，賺錢發財改善生活豈不是很好？</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/4fMjztDgX7Q"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/4fMjztDgX7Q"></iframe></div>
 <div class="draft-block draft--p left">我們都知道，在台灣有大中國意識形態的人立刻就會跳起來大喊，為何只有美國可以當霸主，美國人很壞這樣那樣。</div>
 <div class="draft-block draft--p left">是啊，那羅馬和平的意義在哪？大英國協的全球海上秩序為何長達百年？</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">這就是帝國邏輯</span>，認不認同是一回事，俄國確實有很多人認清這個狀況，並認為持續對抗西方並不正確。說到底，如果國家的存在是為了讓人民過得更好，那俄國花幾十年時間發展經貿，打造出更強大的工業，擁有領先世界的科技。再看看西歐的衰退，誰說五十年後不會東風壓倒西風，和平再起的新俄羅斯會成為歐洲的領袖？</div>
