--- a/_posts/2023-05-03-INMEDIA-天星小輪船長船上暈倒不治-遺孀稱丈夫已連續23日上班.html
+++ b/_posts/2023-05-03-INMEDIA-天星小輪船長船上暈倒不治-遺孀稱丈夫已連續23日上班.html
@@ -12,12 +12,12 @@ author: 獨媒報導
 <p>47歲天星小輪船長鍾先生昨日清晨約5時，被發現在渡輪下層船艙上暈倒，昏迷不醒，送往醫院搶救後證實不治。據了解，死者行駛中環或灣仔兩線，事發時正上通宵班，由晚上10時工作至翌日早上近7時。死者在船上檢查機件期間突然抽筋暈倒，船上同事報案求助。警方與海事處人員隨後登船調查，案件列作工業意外處理，死因有待驗屍後確定。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/C3235J20U5" title="DSC_1863"><img src="https://live.staticflickr.com/65535/52550463876_6f7218b4b7_z.jpg" alt="DSC_1863" /></a></p>
 <p><strong>曾稱公司人手不足 曾透露感到疲累</strong></p>
-<p>死者遺孀昨日傍晚在青衣長亨邨籃球場見記者。鍾太指，丈夫在2019年入職天星小輪，任職副船長，兩年後獲晉升至船長。但丈夫升職後，需要輪更工作，每天工作8小時，「佢個工作時間返10日早、10日晏（夜更）、5日夜（通宵更），先至可以放5日假」，而丈夫去世當日上通宵更，已連續上班23日。鍾太指，丈夫沒有長期病患，身體健康良好，但最近聽過丈夫呻公司人手不足，「走咗成10個人」，加上通關後旅客人數增多，令工作量大增，「佢之前都話好攰，佢成日都話喺架車到瞓着咗，其實佢真係好辛苦囉」。</p>
+<p>死者遺孀昨日傍晚在青衣長亨邨籃球場見記者。鍾太指，丈夫在2019年入職天星小輪，任職副船長，兩年後獲晉升至船長。但丈夫升職後，需要輪更工作，每天工作8小時，「佢個工作時間返10日早、10日晏（中更）、5日夜（通宵更），先至可以放5日假」，而丈夫去世當日上通宵更，已連續上班23日。鍾太指，丈夫沒有長期病患，身體健康良好，但最近聽過丈夫吐苦水，指公司人手不足，「走咗成10個人」，加上通關後旅客人數增多，令工作量大增，「佢之前都話好攰，佢成日都話喺架車到瞓着咗，其實佢真係好辛苦囉」。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/4DF88mcG8V" title="無標題"><img src="https://live.staticflickr.com/65535/52867418613_49e150c10c_b.jpg" alt="無標題" /></a></p>
 <p><strong>原計劃在暑假與家人外遊</strong></p>
-<p>鍾太與丈夫育有兩名13歲及10歲的兒子。鍾太形容丈夫愛錫小朋友，「有咩都顧住個仔」，大兒子得悉爸爸去世後，反映很大，不停又問她「爸爸點解會走」。鍾太亦哽咽道，丈夫對她寵愛有加，原本計劃在6月及8月與家人到日本旅行。</p>
+<p>鍾太與丈夫育有兩名分別13歲及10歲的兒子。鍾太形容丈夫愛錫小朋友，「有咩都顧住個仔」，大兒子得悉爸爸去世後，反映很大，不停又問她「爸爸點解會走」。鍾太亦哽咽道，丈夫對她寵愛有加，原本計劃在6月及8月與家人到日本旅行。</p>
 <p><strong>死者是家中經濟支柱 促天星小輪盡快交代事件</strong></p>
-<p>死者鍾先生月薪約兩萬元，是家中的經濟支柱。從事兼職的鍾太指，日常的生活開支大，「好無助，個個月搵，個個清咁」。她指現時未收到勞工署聯絡，天星小輪亦未就事件交代，「我老公係工作期間死咗，希望（天星小輪）可以畀個交代我」，亦期望政府能提供援助。</p>
+<p>死者鍾先生月薪約兩萬元，是家中的經濟支柱。本身有從事兼職的鍾太指，日常的生活開支大：「好無助，個個月搵，個個清咁」。她指現時未收到勞工處聯絡，天星小輪亦未就事件作交代，「我老公係工作期間死咗，希望（天星小輪）可以畀個交代我」，並期望政府能提供援助。</p>
 <p><a data-flickr-embed="true" href="https://www.flickr.com/gp/inmediahk/w25Y2a0zN0" title="無標題"><img src="https://live.staticflickr.com/65535/52867418783_97d84ef88a_b.jpg" alt="無標題" /></a></p>
 <p><strong>天星小輪：輪更表沿用多時 員工普遍支持</strong></p>
 <p>天星小輪回覆傳媒指，對於有員工在當值時突然去世，公司及全體同事均表十分惋惜，稱會就有關該員工致命原因全力配合調查，如有不足之處，會盡快改善安排。</p>
