--- a/_posts/2023-05-02-PQ-說好的制裁呢-中國制裁澳洲失敗-轉向重建關係.html
+++ b/_posts/2023-05-02-PQ-說好的制裁呢-中國制裁澳洲失敗-轉向重建關係.html
@@ -16,7 +16,7 @@ author: 張東和
 
 
 
-<p>為了防止澳洲國內不斷擴大的中國滲透，澳洲早在 2018 年 6 月通過兩項反外國干預法，針對中國間諜讓外國影響力透明化。此外，2018 年 8 月澳洲還禁止了具有監控疑慮的中國華為 5G 通訊設備。但這些措施並沒有引起中國「具體的」反應，反而是直到 2020 年 4 月澳洲呼籲調查武漢肺炎起源，還有 2020 年 6 月 30 日《香港國安法》正式上路，莫里森公開反對被中國視為干涉內政之後。</p>
+<p>為了防止澳洲國內不斷擴大的中國滲透，澳洲早在 2018 年 6 月通過兩項反外國干預法，針對中國間諜讓外國影響力透明化。此外，2018 年 8 月澳洲還禁止了具有監控疑慮的中國華為 5G 通訊設備。但這些措施並沒有引起中國「具體的」反應，反而是直到 2020 年 4 月澳洲呼籲調查武漢肺炎起源，中國動了以經濟脅迫澳洲的念頭，加上 2020 年 6 月 30 日《香港國安法》正式上路，莫里森公開反對，中國視之為干涉內政，自此，澳中關係急轉直下。</p>
 
 
 
@@ -28,7 +28,7 @@ author: 張東和
 
 
 
-<h2>澳洲轉移出口對象─日本、韓國、台灣、印度</h2>
+<h3>澳洲轉移出口對象─日本、韓國、台灣、印度</h3>
 
 
 
@@ -60,7 +60,7 @@ author: 張東和
 
 
 
-<h3>中國制裁澳洲結果制裁到自己　城市斷電還買到更貴的煤碳</h3>
+<h3>中國制裁到自己　城市斷電　買到更貴的煤碳</h3>
 
 
 
@@ -84,7 +84,7 @@ author: 張東和
 
 
 
-<h2>澳中關係和緩　會走向委屈的和平嗎?&nbsp;</h2>
+<h3>澳中關係和緩　會走向委屈的和平嗎?&nbsp;</h3>
 
 
 
@@ -104,7 +104,7 @@ author: 張東和
 
 
 
-<p>澳洲面對這 3 年的中國制裁，為自家產品開發了其他市場，像是澳洲煤碳有印度等其他國家採購、英國取代中國成為澳洲葡萄酒的最大出口國，澳洲龍蝦出口到泰國等。再加上，由於中國間諜和滲透等惡行劣跡早已被揭露，澳洲對中國影響力更有警覺。另外，澳洲也是 AUKUS 及 QUAD 的成員，這樣看來儘管有經濟上的因素，但澳洲仍然處在安全上對抗中國的框架中。</p>
+<p>澳洲面對這 3 年的中國制裁，為自家產品開發了其他市場，像是澳洲煤碳有印度等其他國家採購、英國取代中國成為澳洲葡萄酒的最大出口國，澳洲龍蝦出口到泰國等。再加上，由於中國間諜和滲透等惡行劣跡早已被揭露，澳洲對中國影響力更有警覺。另外，澳洲也是 AUKUS 及 QUAD 的成員，艾班尼斯在今年4月，繼紐西蘭之後，宣布出席2023年的北約峰會，儘管紐澳都不是北約成員國。這樣看來即使有經濟上的因素，但澳洲仍然處在安全上對抗中國的框架中。</p>
 
 
 
