--- a/_posts/2023-05-04-INITIUM-2023新闻自由指数-中国倒数第二-香港接近-严重侵害-一分钟数洞.html
+++ b/_posts/2023-05-04-INITIUM-2023新闻自由指数-中国倒数第二-香港接近-严重侵害-一分钟数洞.html
@@ -19,12 +19,12 @@ author:
  
 
  
+
  
  
-<p>值得注意的是，在亚太地区，民主化较久的日本，却被评定为“问题显著”。主因是在政治方面，日本民族主义右派经常对媒体造成压力，加上经常只有媒体界选定的“记者俱乐部”（记者クラブ）成员可以参与采访活动，这些问题都有碍于新闻的多元性。另外，专家也指出，社会面向上，政府和财团也经常向媒体施压，所以报导贪腐、性骚扰等议题时，媒体也经常有自我审查的现象。</p><p>至于被评为艰难与恶劣的国家，这十年来从58个略增至73个。其中，中东和北非的绝大多数国家，这十年来都属于这两个级别。在亚洲，除了政治极度高压的朝鲜之外，大幅逮捕独立记者的越南，以及审查机制严峻的中国，都属于状况最为严峻的级别。</p><p>
-
-</p><figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230505-dataphile-press-freedom/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/f09ecb7dc89341ce977f5343e56bafde.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure>
-
-<figure class="image" itemscope itemtype="https://schema.org/ImageObject"><a class="image" href="https://theinitium.com/article/20230505-dataphile-press-freedom/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/6df253b9e9ea4894aadd8b5bde1848f0.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
-            <figcaption itemprop="caption"><span class="credit"></span></figcaption></figure><p></p><p>中国在180个国家中排名倒数第二，无国界记者组织的专家除了指出记者经常因言获罪，被控寻衅滋事或煽动颠覆，也提到中国共产党组织对媒体的控制，以及习近平上台后，媒体文化更加收紧，更无法探索真相，遑论报导。</p><p>香港则排名140，稍胜索马里。在《港版国安法》实施之前，香港都被评为中间“问题显著”的等级，在《国安法》实施之后，则被评为“艰难”，从综合分数来看，已经接近“恶劣”。报告提到，香港媒体环境在前述五大面向上，都面对严峻的挑战。可管中一窥的是，去年评完奖却取消颁奖而引发争议的“人权新闻奖”，近日颁布去年的得奖名单，其中包括四篇《立场新闻》的获奖报导，但名单上隐去了作品标题。</p><p>与去年相较，有些国家的名次变化较大。比如巴西的名次提升了18名、马来西亚更提升了40名，主因都是政党轮替，原先对异议媒体较具敌意的政府下台。另一方面，印度因为媒体垄断情况更趋严重，名次下降了11名。土耳其、突尼西亚和塞内加尔名次也都明显下降（分别下降16、27和31名），原因是执政者展开对记者的控罪。</p><p>整体而言，无国界记者组织也提醒，“假消息”是当前各国媒体面对的一大挑战。在约三分之二的国家中，专家都认为，经常有政治人物或组织系统性传播假消息，导致真假之间的界线越来越难区辨；而人工智慧／人工智能（AI）的发展，以及马斯克上任后的推特政策改变，也为媒体“求真”带来了进一步的挑战。</p>
+ 
+<p>值得注意的是，在亚太地区，民主化较久的日本，却被评定为“问题显著”。主因是在政治方面，日本民族主义右派经常对媒体造成压力，加上经常只有媒体界选定的“记者俱乐部”（记者クラブ）成员可以参与采访活动，这些问题都有碍于新闻的多元性。另外，专家也指出，社会面向上，政府和财团也经常向媒体施压，所以报导贪腐、性骚扰等议题时，媒体也经常有自我审查的现象。</p><p>至于被评为艰难与恶劣的国家，这十年来从58个略增至73个。其中，中东和北非的绝大多数国家，这十年来都属于这两个级别。在亚洲，除了政治极度高压的朝鲜之外，大幅逮捕独立记者的越南，以及审查机制严峻的中国，都属于状况最为严峻的级别。
+</p><section class="album"><p></p><p><a class="image" href="https://theinitium.com/article/20230505-dataphile-press-freedom/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/48faeca9344f4091bf38077a1900f28d.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p><a class="image" href="https://theinitium.com/article/20230505-dataphile-press-freedom/undefined"><img src="https://d32kak7w9u5ewj.cloudfront.net/media/image/2023/05/6df253b9e9ea4894aadd8b5bde1848f0.png?imageView2/1/w/1080/h/1080/format/jpg" alt itemprop="contentUrl" referrerpolicy="no-referrer"></a>
+            </p><figcaption itemprop="caption"><span class="credit"></span></figcaption><p></p><p>
+中国在180个国家中排名倒数第二，无国界记者组织的专家除了指出记者经常因言获罪，被控寻衅滋事或煽动颠覆，也提到中国共产党组织对媒体的控制，以及习近平上台后，媒体文化更加收紧，更无法探索真相，遑论报导。</p><p>香港则排名140，稍胜索马里。在《港版国安法》实施之前，香港都被评为中间“问题显著”的等级，在《国安法》实施之后，则被评为“艰难”，从综合分数来看，已经接近“恶劣”。报告提到，香港媒体环境在前述五大面向上，都面对严峻的挑战。可管中一窥的是，去年评完奖却取消颁奖而引发争议的“人权新闻奖”，近日颁布去年的得奖名单，其中包括四篇《立场新闻》的获奖报导，但名单上隐去了作品标题。</p><p>与去年相较，有些国家的名次变化较大。比如巴西的名次提升了18名、马来西亚更提升了40名，主因都是政党轮替，原先对异议媒体较具敌意的政府下台。另一方面，印度因为媒体垄断情况更趋严重，名次下降了11名。土耳其、突尼西亚和塞内加尔名次也都明显下降（分别下降16、27和31名），原因是执政者展开对记者的控罪。</p><p>整体而言，无国界记者组织也提醒，“假消息”是当前各国媒体面对的一大挑战。在约三分之二的国家中，专家都认为，经常有政治人物或组织系统性传播假消息，导致真假之间的界线越来越难区辨；而人工智慧／人工智能（AI）的发展，以及马斯克上任后的推特政策改变，也为媒体“求真”带来了进一步的挑战。</p></section>
