--- a/_posts/2023-05-05-INMEDIA-國殤之柱-被國安處檢取-創作者感離譜-指港府多年來容許豎立.html
+++ b/_posts/2023-05-05-INMEDIA-國殤之柱-被國安處檢取-創作者感離譜-指港府多年來容許豎立.html
@@ -21,6 +21,6 @@ author: 獨媒報導
  <br />
 Sincerely yours,<br />
 Jens Galschiot, May 5th, 2023</p></blockquote>
-<p><a href="https://www.inmediahk.net/node/1095888/">警方國安處較早時表示，今日早上持法庭手令採取行動，檢取一件與「煽動他人顛覆國家政權罪」有關的證物。</a>據了解，證物就是「國殤之柱」。</p>
+<p><a href="https://www.inmediahk.net/node/1095888/">警方國安處較早時表示，今日早上持法庭手令採取行動，檢取一件與「煽動他人顛覆國家政權罪」有關的證物。</a>據了解，證物就是「國殤之柱」。香港大學發言人晚上回覆傳媒查詢，確認警方今早出示搜查令，在元朗港大嘉道理中心內取走一件證物。 </p>
 <p>「國殤之柱」在1997年來到香港，於當年六四晚會完結後，獲香港大學同學護送至港大校園展示，校方起初反對，但最終容許「國殤之柱」放置在港大。2013年高志活曾親身前往港大為「國殤之柱」修復。每年六四事件的紀念活動，都包括支聯會在港大為「國殤之柱」洗刷。</p>
 </div></div></div><div class="field field-name-taxonomy-vocabulary-20 field-type-taxonomy-term-reference field-label-above"><div class="field-label">版權:&nbsp;</div><div class="field-items"><div class="field-item even"><a href="https://www.inmediahk.net/taxonomy/term/5068">禁止衍生</a></div></div></div>
